further work on the contact page

--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,325 @@
       </div>
     </nav>
 
+    <!-- Contact Page Section -->
+    <section class="py-5 bg-light">
+      <div class="container">
+        <h2 class="text-center mb-4">Contact</h2>
+        <p class="text-center mb-5">
+          Ne puteți contacta oricând pentru întrebări, programări sau
+          colaborări.
+        </p>
+
+        <div class="row">
+          <!-- Contact Info -->
+          <div class="col-md-6 mb-4">
+            <h5 class="mb-3">Date de contact</h5>
+            <p>
+              <i class="fas fa-map-marker-alt me-2"></i>
+              <b> Adresă sediu: </b>
+              <a
+                href="https://maps.app.goo.gl/daki6LruqDS9hrRs8"
+                target="_blank"
+              >
+                Str.1 Decembrie 1918, Nr.17, Bloc A, Sc 3, Galați, Romania,
+                800511
+              </a>
+            </p>
+            <p>
+              <i class="fas fa-envelope me-2"></i>
+              <b>Adresă de email: </b>
+              <a href="mailto:fotoadda@yahoo.com">fotoadda@yahoo.com</a>
+            </p>
+            <p>
+              <i class="fas fa-phone me-2"></i>
+              <b>Număr de telefon: </b>
+              <a href="tel:+40744632620">0744 632 620</a>
+            </p>
+            <div class="d-flex justify-content-start align-items-center mb-3">
+              <a
+                class="text-decoration-none d-flex justify-content-start align-items-center text-dark"
+                href="https://www.facebook.com/profile.php?id=100063818465707"
+                target="_blank"
+              >
+                <i class="fab fa-facebook fa-2x me-2"></i>
+                Facebook
+              </a>
+            </div>
+            <div class="d-flex justify-content-start align-items-center">
+              <a
+                class="text-decoration-none d-flex justify-content-start align-items-center text-dark"
+                href="https://www.instagram.com/studiofotoadda?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                target="_blank"
+              >
+                <i class="fab fa-instagram fa-2x me-2"></i>
+                Instagram
+              </a>
+            </div>
+          </div>
+
+          <!-- Google Map -->
+          <div class="col-md-6">
+            <div class="ratio ratio-4x3">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2848.778228487942!2d27.965927315538927!3d45.433305479100814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b6dc6f1a5b4f6b%3A0xa1d0fdd391ed7d9e!2sStrada%20Exemplu%20123%2C%20Gala%C8%9Bi!5e0!3m2!1sen!2sro!4v1713703712345!5m2!1sen!2sro"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action Section -->
+    <section
+      class="py-5 text-center text-white"
+      style="background-color: #343a40"
+    >
+      <div class="container">
+        <h3 class="mb-3 text-white">Vrei să colaborăm?</h3>
+        <p class="mb-4">
+          Programează o ședință foto și lasă-ne să transformăm amintirile tale
+          în imagini de neuitat!
+        </p>
+        <a
+          href="#"
+          class="btn btn-primary me-2"
+          data-bs-toggle="modal"
+          data-bs-target="#studio-foto-modal"
+        >
+          <i class="fas fa-envelope me-2"></i>Contactează-ne
+        </a>
+        <a href="portfolio.html" class="btn btn-outline-secondary">
+          <i class="fas fa-images me-2"></i>Vezi portofoliul
+        </a>
+      </div>
+    </section>
+
+    <footer class="footer bg-light py-6">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 my-3 d-flex flex-column align-items-start gap-3">
+            <div
+              class="d-flex justify-content-center align-items-center logo-footer"
+            >
+              <img
+                src="images/logo.svg"
+                alt="Logo Studio Foto Adda"
+                width="50"
+              />
+              <div class="d-flex flex-column">
+                <span class="logo-text text-dark"> Studio Foto Adda </span>
+                <small class="logo-subtext text-dark"
+                  >Servicii Foto Profesionale</small
+                >
+              </div>
+            </div>
+            <p class="p-logo-footer">
+              Oferim servicii foto profesionale pentru nunți, botezuri, ședințe
+              foto de familie și alte evenimente speciale din viața ta.
+            </p>
+          </div>
+          <div class="col-md-4 my-3">
+            <h6>Linkuri utile</h6>
+            <ul class="list-unstyled">
+              <li>
+                <i class="fa-solid fa-cookie-bite me-2"></i>
+                Info:
+                <a href="#">Politica de cookies</a>
+              </li>
+              <li>
+                <i class="fa-solid fa-envelope me-2"></i> Adresă de email:
+                <a href="mailto:fotoadda@yahoo.com">fotoadda@yahoo.com</a>
+              </li>
+              <li>
+                <i class="fa-solid fa-compass me-2"></i>
+                Navigare: <a href="index.html">Acasă</a>,
+                <a href="services.html">Servicii</a>,
+                <a href="portfolio.html">Portofoliu</a>,
+                <a href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4 my-3">
+            <h6>Rețele de socializare</h6>
+            <div class="mb-4">
+              <a
+                href="https://www.facebook.com/profile.php?id=100063818465707"
+                target="_blank"
+                class="me-3 text-decoration-none"
+              >
+                <i class="fab fa-facebook fa-3x"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/studiofotoadda?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                target="_blank"
+                class="me-3 text-decoration-none"
+              >
+                <i class="fab fa-instagram fa-3x"></i>
+              </a>
+              <a href="#" class="me-3 text-decoration-none">
+                <i class="fab fa-whatsapp fa-3x"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Contact Form Modal -->
+    <div
+      class="modal fade"
+      id="studio-foto-modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Studio Foto Adda</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <h3 class="text-center">Solicită o ofertă personalizată</h3>
+            <form
+              id="contactForm"
+              method="POST"
+              action="/api/send-email"
+              class="p-4"
+            >
+              <div class="mb-3">
+                <label for="name" class="form-label">Nume complet</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  name="name"
+                  placeholder="Ex: Andrei Popescu"
+                />
+                <div class="mt-1 validation-error display-none">
+                  Câmpul „Nume complet” este obligatoriu!
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label for="email" class="form-label">Adresă de email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  placeholder="Ex: andrei@email.com"
+                />
+              </div>
+
+              <div class="mb-3">
+                <label for="phone" class="form-label">Număr de telefon</label>
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="phone"
+                  name="phone"
+                  placeholder="Ex: 07xx xxx xxx"
+                />
+                <div class="mt-1 validation-error display-none">
+                  Câmpul „Număr de telefon” este obligatoriu!
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label for="date" class="form-label"
+                  >Data estimativă a evenimentului / ședinței foto</label
+                >
+                <input type="date" name="date" class="form-control" id="date" />
+              </div>
+
+              <div class="mb-3">
+                <label for="location" class="form-label"
+                  >Locația evenimentului (dacă este relevant)</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  name="location"
+                  id="location"
+                  placeholder="Ex: Restaurant Royal Galați"
+                />
+              </div>
+
+              <div class="mb-3">
+                <label for="service" class="form-label"
+                  >Ce tip de servicii vă interesează?</label
+                >
+                <select name="service" class="form-select" id="service">
+                  <option selected disabled value="">Alegeți o opțiune</option>
+                  <option>Fotografii de nuntă</option>
+                  <option>Fotografii de botez</option>
+                  <option>Eveniment privat (majorat, aniversare etc.)</option>
+                  <option>Sesiune foto în studio</option>
+                  <option>Alt tip de eveniment</option>
+                </select>
+              </div>
+
+              <div class="mb-3">
+                <label for="referral" class="form-label"
+                  >Cum ați aflat de noi?</label
+                >
+                <select class="form-select" id="referral">
+                  <option selected disabled value="">Alegeți o opțiune</option>
+                  <option>Recomandare de la prieteni/familie</option>
+                  <option>Facebook</option>
+                  <option>Instagram</option>
+                  <option>Google</option>
+                  <option>Am văzut site-ul dvs.</option>
+                  <option>Altă sursă</option>
+                </select>
+              </div>
+
+              <div class="mb-3">
+                <label for="message" class="form-label">Mesaj (opțional)</label>
+                <textarea
+                  class="form-control"
+                  id="message"
+                  rows="4"
+                  name="message"
+                  placeholder="Spuneți-ne mai multe despre evenimentul dvs."
+                ></textarea>
+              </div>
+              <div class="d-flex gap-3">
+                <button
+                  type="submit"
+                  class="btn btn-primary d-flex align-items-center send-btn-custom flex-1"
+                  id="submitButton"
+                >
+                  <span class="button-text">Trimite cererea</span>
+                  <div
+                    class="spinner-border spinner-border-sm ms-2 d-none"
+                    role="status"
+                    id="loadingSpinner"
+                    aria-hidden="true"
+                  ></div>
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-secondary close-btn-custom flex-1"
+                  data-bs-dismiss="modal"
+                >
+                  Anulează
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <button id="to-top" class="to-top-btn">
       <i class="fa-solid fa-arrow-up text-white"></i>
     </button>
