--- a/services.html
+++ b/services.html
@@ -308,7 +308,10 @@
           >
             <i class="fab fa-instagram fa-3x"></i>
           </a>
-          <a href="#" class="text-dark text-decoration-none">
+          <a
+            href="https://wa.me/400758490201"
+            class="text-dark text-decoration-none"
+          >
             <i class="fab fa-whatsapp fa-3x"></i>
           </a>
         </div>
