--- a/index.html
+++ b/index.html
@@ -674,7 +674,10 @@
               >
                 <i class="fab fa-instagram fa-3x"></i>
               </a>
-              <a href="#" class="me-3 text-decoration-none">
+              <a
+                href="https://wa.me/400758490201"
+                class="me-3 text-decoration-none"
+              >
                 <i class="fab fa-whatsapp fa-3x"></i>
               </a>
             </div>
