further work on the contact page

--- a/contact.html
+++ b/contact.html
@@ -148,9 +148,13 @@
           <div class="col-md-6">
             <div class="ratio ratio-4x3">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2848.778228487942!2d27.965927315538927!3d45.433305479100814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b6dc6f1a5b4f6b%3A0xa1d0fdd391ed7d9e!2sStrada%20Exemplu%20123%2C%20Gala%C8%9Bi!5e0!3m2!1sen!2sro!4v1713703712345!5m2!1sen!2sro"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2799.1986363646542!2d28.0228514!3d45.4456532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b6df4cf07f6345%3A0xe1b8497a35dc88d!2sStudio%20Foto%20Adda!5e0!3m2!1sen!2sro!4v1745341473006!5m2!1sen!2sro"
+                width="600"
+                height="450"
+                style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
             </div>
           </div>
