--- a/index.html
+++ b/index.html
@@ -365,7 +365,12 @@
         <h2 class="text-center mb-5">
           Ce spun clienții despre serviciile noastre
         </h2>
-        <div id="testimonialCarousel" class="carousel slide">
+        <div
+          id="testimonialCarousel"
+          class="carousel slide"
+          data-bs-ride="carousel"
+          data-bs-interval="5000"
+        >
           <div class="carousel-inner">
             <!-- Slide 1 -->
             <div class="carousel-item active">
