--- a/contact.html
+++ b/contact.html
@@ -249,7 +249,10 @@
               >
                 <i class="fab fa-instagram fa-3x"></i>
               </a>
-              <a href="#" class="me-3 text-decoration-none">
+              <a
+                href="https://wa.me/400744632620"
+                class="me-3 text-decoration-none"
+              >
                 <i class="fab fa-whatsapp fa-3x"></i>
               </a>
             </div>
@@ -420,7 +423,7 @@
       class="d-flex justify-content-center align-items-center flex-column side-buttons gap-2"
     >
       <a
-        href="https://wa.me/400750419349"
+        href="https://wa.me/400744632620"
         target="_blank"
         class="side-buttons-whatsapp text-decoration-none"
       >
