--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           >
             <i class="fab fa-instagram fa-3x"></i>
           </a>
-          <a href="#" class="me-3">
+          <a href="https://wa.me/400744632620" target="_blank" class="me-3">
             <i class="fab fa-whatsapp fa-3x"></i>
           </a>
         </div>
@@ -681,6 +681,7 @@
               </a>
               <a
                 href="https://wa.me/400758490201"
+                target="_blank"
                 class="me-3 text-decoration-none"
               >
                 <i class="fab fa-whatsapp fa-3x"></i>
@@ -853,7 +854,7 @@
       class="d-flex justify-content-center align-items-center flex-column side-buttons gap-2"
     >
       <a
-        href="https://wa.me/400750419349"
+        href="https://wa.me/400744632620"
         target="_blank"
         class="side-buttons-whatsapp text-decoration-none"
       >
