--- a/services.html
+++ b/services.html
@@ -310,6 +310,7 @@
           </a>
           <a
             href="https://wa.me/400758490201"
+            target="_blank"
             class="text-dark text-decoration-none"
           >
             <i class="fab fa-whatsapp fa-3x"></i>
@@ -380,7 +381,11 @@
               >
                 <i class="fab fa-instagram fa-3x"></i>
               </a>
-              <a href="#" class="me-3 text-decoration-none">
+              <a
+                href="https://wa.me/400744632620"
+                target="_blank"
+                class="me-3 text-decoration-none"
+              >
                 <i class="fab fa-whatsapp fa-3x"></i>
               </a>
             </div>
@@ -551,7 +556,7 @@
       class="d-flex justify-content-center align-items-center flex-column side-buttons gap-2"
     >
       <a
-        href="https://wa.me/400750419349"
+        href="https://wa.me/400744632620"
         target="_blank"
         class="side-buttons-whatsapp text-decoration-none"
       >
