--- a/contact.html
+++ b/contact.html
@@ -101,27 +101,43 @@
           <!-- Contact Info -->
           <div class="col-md-6 mb-4">
             <h5 class="mb-3">Date de contact</h5>
-            <p>
+            <div class="mb-2 border rounded-4 p-2">
               <i class="fas fa-map-marker-alt me-2"></i>
               <b> Adresă sediu: </b>
               <a
+                id="addressLink"
+                class="text-dark text-decoration-none"
                 href="https://maps.app.goo.gl/daki6LruqDS9hrRs8"
                 target="_blank"
               >
                 Str.1 Decembrie 1918, Nr.17, Bloc A, Sc 3, Galați, Romania,
                 800511
               </a>
-            </p>
-            <p>
+              <button
+                id="copyButton"
+                class="btn btn-outline-primary ms-3"
+                onclick="copyToClipboard()"
+                aria-label="Copy address"
+              >
+                <i class="fas fa-copy"></i> Copiază
+              </button>
+            </div>
+            <div class="mb-2 border rounded-4 p-2">
               <i class="fas fa-envelope me-2"></i>
               <b>Adresă de email: </b>
-              <a href="mailto:fotoadda@yahoo.com">fotoadda@yahoo.com</a>
-            </p>
-            <p>
+              <a
+                class="text-dark text-decoration-none"
+                href="mailto:fotoadda@yahoo.com"
+                >fotoadda@yahoo.com</a
+              >
+            </div>
+            <div class="mb-2 border rounded-4 p-2">
               <i class="fas fa-phone me-2"></i>
               <b>Număr de telefon: </b>
-              <a href="tel:+40744632620">0744 632 620</a>
-            </p>
+              <a class="text-dark text-decoration-none" href="tel:+40744632620"
+                >0744 632 620</a
+              >
+            </div>
             <div class="d-flex justify-content-start align-items-center mb-3">
               <a
                 class="text-decoration-none d-flex justify-content-start align-items-center text-dark"
@@ -159,6 +175,26 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- Toast Notification -->
+      <div
+        id="toastNotification"
+        class="toast align-items-center text-bg-success border-0 position-fixed top-0 start-50 translate-middle-x mt-3"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="toast-header">
+          <strong class="me-auto">Succes</strong>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="toast-body">Adresa a fost copiată în clipboard!</div>
       </div>
     </section>
 
