--- a/contact.html
+++ b/contact.html
@@ -180,13 +180,13 @@
       <!-- Toast Notification -->
       <div
         id="toastNotification"
-        class="toast align-items-center text-bg-success border-0 position-fixed top-0 start-50 translate-middle-x mt-3"
+        class="toast align-items-center text-bg-primary border-0 position-fixed top-0 start-50 translate-middle-x mt-3"
         role="alert"
         aria-live="assertive"
         aria-atomic="true"
       >
         <div class="toast-header">
-          <strong class="me-auto">Succes</strong>
+          <strong class="me-auto">Succes!</strong>
           <button
             type="button"
             class="btn-close"
