--- a/cookies.html
+++ b/cookies.html
@@ -106,22 +106,23 @@
         </p>
       </div>
 
-      <h3 class="mt-4">Ce sunt Cookies?</h3>
+      <h3 class="mt-4">Ce sunt cookie-urile?</h3>
       <p>
-        Cookies sunt fișiere mici care sunt stocate pe dispozitivul
-        utilizatorului atunci când vizitează un site web. Acestea sunt folosite
-        pentru a păstra informații care pot îmbunătăți experiența utilizatorului
-        pe site, cum ar fi preferințele sau setările anterioare.
+        Cookie-urile (sau cookies) sunt fișiere mici care sunt stocate pe
+        dispozitivul utilizatorului atunci când acesta vizitează un site web. De
+        obicei, acestea sunt folosite pentru a păstra informații care pot
+        îmbunătăți experiența utilizatorului pe site, cum ar fi preferințele sau
+        setările anterioare.
       </p>
 
-      <h3 class="mt-4">De ce sunt importante Cookies?</h3>
+      <h3 class="mt-4">De ce sunt importante cookie-urile?</h3>
       <p>
-        Cookies ajută la crearea unei experiențe mai personalizate pentru
+        Cookie-urile ajută la crearea unei experiențe mai personalizate pentru
         utilizatori, fiind utilizate pentru a salva sesiuni, preferințe de limbă
         sau pentru a menține un site funcțional.
       </p>
 
-      <h3 class="mt-4">Ce facem dacă vom implementa Cookies?</h3>
+      <h3 class="mt-4">Ce facem dacă vom implementa cookie-uri?</h3>
       <p>
         În cazul în care vom implementa cookies în viitor, vă vom informa
         printr-un pop-up pe site-ul nostru, iar politica de cookies va fi
