--- a/portfolio.html
+++ b/portfolio.html
@@ -1676,6 +1676,28 @@
       </a>
     </div>
 
+    <!-- Cookie popup -->
+    <div
+      id="cookie-popup"
+      class="position-fixed bottom-0 start-0 end-0 bg-dark text-white p-3 d-none z-3"
+    >
+      <div
+        class="container d-flex justify-content-between align-items-center flex-column flex-md-row"
+      >
+        <p class="mb-2 mb-md-0">
+          Acest site nu folosește în prezent cookie-uri. Dacă în viitor vom
+          implementa cookie-uri, ne vom asigura că vizitatorii site-ului sunt
+          informați în mod clar și transparent.
+        </p>
+        <div class="d-flex gap-2">
+          <a href="cookies.html" class="btn btn-outline-light btn-sm"
+            >Află mai multe despre cookies</a
+          >
+          <button id="cookie-accept" class="btn btn-success btn-sm">OK</button>
+        </div>
+      </div>
+    </div>
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
