--- a/services.html
+++ b/services.html
@@ -618,5 +618,11 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
+
+    <script>
+      function setTurnstileResponseAdda(token) {
+        document.getElementById("cf-turnstile-response-adda").value = token;
+      }
+    </script>
   </body>
 </html>
