--- a/portfolio.html
+++ b/portfolio.html
@@ -1723,5 +1723,11 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
+
+    <script>
+      function setTurnstileResponseAdda(token) {
+        document.getElementById("cf-turnstile-response-adda").value = token;
+      }
+    </script>
   </body>
 </html>
