--- a/cookies.html
+++ b/cookies.html
@@ -171,7 +171,7 @@
               <li>
                 <i class="fa-solid fa-cookie-bite me-2"></i>
                 Info:
-                <a href="#">Politica de cookies</a>
+                <a href="cookies.html">Politica de cookies</a>
               </li>
               <li>
                 <i class="fa-solid fa-envelope me-2"></i> Adresă de email:
