--- a/contact.html
+++ b/contact.html
@@ -294,6 +294,7 @@
               </a>
               <a
                 href="https://wa.me/400744632620"
+                target="_blank"
                 class="me-3 text-decoration-none"
               >
                 <i class="fab fa-whatsapp fa-3x"></i>
