--- a/portfolio.html
+++ b/portfolio.html
@@ -112,23 +112,41 @@
     </div>
 
     <!-- Category Buttons -->
-    <div class="d-flex justify-content-center mb-4">
-      <button class="btn btn-primary me-2" data-category="wedding">
-        Nunți
-      </button>
-      <button class="btn btn-primary me-2" data-category="baptism">
-        Botezuri
-      </button>
-      <button class="btn btn-primary me-2" data-category="family-photos">
-        Fotografii de familie
-      </button>
-      <button class="btn btn-primary me-2" data-category="christmas">
-        Fotografii de Crăciun
-      </button>
-      <button class="btn btn-primary me-2" data-category="easter">
-        Fotografii de Paște
-      </button>
+    <div class="container">
+      <div class="d-flex justify-content-center mb-4">
+        <button
+          class="btn btn-primary me-2 category-button-flex"
+          data-category="wedding"
+        >
+          Nunți
+        </button>
+        <button
+          class="btn btn-primary me-2 category-button-flex"
+          data-category="baptism"
+        >
+          Botezuri
+        </button>
+        <button
+          class="btn btn-primary me-2 category-button-flex"
+          data-category="family-photos"
+        >
+          Fotografii de familie
+        </button>
+        <button
+          class="btn btn-primary me-2 category-button-flex"
+          data-category="christmas"
+        >
+          Fotografii de Crăciun
+        </button>
+        <button
+          class="btn btn-primary me-2 category-button-flex"
+          data-category="easter"
+        >
+          Fotografii de Paște
+        </button>
+      </div>
     </div>
+
     <div class="container py-5">
       <div class="row" id="portfolio">
         <!-- Wedding Photos -->
