--- a/services.html
+++ b/services.html
@@ -285,7 +285,7 @@
         </p>
 
         <div
-          class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4 gap-3"
+          class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4 gap-3 cta-buttons-container"
         >
           <button
             class="btn btn-primary"
