--- a/portfolio.html
+++ b/portfolio.html
@@ -99,9 +99,9 @@
     </nav>
 
     <div class="container my-5">
-      <h1 class="text-center">Portofoliu - Studio Foto Adda</h1>
+      <h1 class="text-center portfolio-title">Portofoliu - Studio Foto Adda</h1>
 
-      <p class="lead text-center mb-5">
+      <p class="lead text-center mb-5 portfolio-p">
         La Studio Foto Adda, capturăm momentele speciale din viața clienților
         noștri cu pasiune și profesionalism. În galeria de mai jos, veți găsi
         câteva dintre cele mai importante evenimente pe care am avut plăcerea să
@@ -113,7 +113,9 @@
 
     <!-- Category Buttons -->
     <div class="container">
-      <div class="d-flex justify-content-center mb-4">
+      <div
+        class="d-flex justify-content-center category-buttons-container-custom mb-4"
+      >
         <button
           class="btn btn-primary me-2 category-button-flex"
           data-category="wedding"
@@ -1705,7 +1707,7 @@
       </div>
     </section>
 
-    <footer class="footer bg-light py-6">
+    <footer class="footer footer-custom bg-light py-6">
       <div class="container">
         <div class="row">
           <div class="col-md-4 my-3 d-flex flex-column align-items-start gap-3">
