--- a/services.html
+++ b/services.html
@@ -96,8 +96,8 @@
     </nav>
 
     <section class="container py-5">
-      <h2 class="text-center mb-4">Serviciile Noastre</h2>
-      <p class="lead">
+      <h2 class="text-center mb-4 services-title">Serviciile Noastre</h2>
+      <p class="lead services-p">
         Oferim o gamă variată de servicii fotografice profesionale, dedicate
         celor mai importante momente din viața ta. Fie că este vorba de o nuntă,
         un botez, o ședință foto de familie sau evenimente speciale, suntem aici
@@ -326,7 +326,7 @@
       </div>
     </section>
 
-    <footer class="footer bg-light py-6">
+    <footer class="footer footer-custom bg-light py-6">
       <div class="container">
         <div class="row">
           <div class="col-md-4 my-3 d-flex flex-column align-items-start gap-3">
