--- a/contact.html
+++ b/contact.html
@@ -230,7 +230,7 @@
       </div>
     </section>
 
-    <footer class="footer bg-light py-6">
+    <footer class="footer footer-custom bg-light py-6">
       <div class="container">
         <div class="row">
           <div class="col-md-4 my-3 d-flex flex-column align-items-start gap-3">
