--- a/index.html
+++ b/index.html
@@ -451,7 +451,9 @@
             data-bs-target="#testimonialCarousel"
             data-bs-slide="prev"
           >
-            <i class="fas fa-arrow-circle-left fa-3x text-primary"></i>
+            <i
+              class="fas fa-arrow-circle-left fa-3x text-primary carousel-arrow-left-custom"
+            ></i>
           </button>
           <button
             class="carousel-control-next"
@@ -459,7 +461,9 @@
             data-bs-target="#testimonialCarousel"
             data-bs-slide="next"
           >
-            <i class="fas fa-arrow-circle-right fa-3x text-primary"></i>
+            <i
+              class="fas fa-arrow-circle-right fa-3x text-primary carousel-arrow-right-custom"
+            ></i>
           </button>
         </div>
       </div>
@@ -695,7 +699,7 @@
                   </button>
                   <button
                     type="button"
-                    class="btn btn-secondary close-btn-custom flex-1"
+                    class="btn btn-secondary button-text close-btn-custom flex-1"
                     data-bs-dismiss="modal"
                   >
                     Anulează
