--- a/portfolio.html
+++ b/portfolio.html
@@ -1683,7 +1683,7 @@
     </div>
 
     <section
-      class="py-6 text-center"
+      class="py-6 text-center portfolio-cta-custom"
       style="background-color: #f0f4a1; color: #3e2723"
     >
       <div class="container">
