--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,7 @@
         </p>
         <a
           href="#"
-          class="btn btn-primary me-2"
+          class="btn btn-primary me-2 mb-3"
           data-bs-toggle="modal"
           data-bs-target="#studio-foto-modal"
         >
