--- a/portfolio.html
+++ b/portfolio.html
@@ -120,19 +120,22 @@
           class="btn btn-primary me-2 category-button-flex"
           data-category="wedding"
         >
-          Nunți
+          <i class="fa-solid fa-ring ring-icon-custom fa-2x"></i>
+          <span class="text-wedding">Nunți</span>
         </button>
         <button
           class="btn btn-primary me-2 category-button-flex"
           data-category="baptism"
         >
-          Botezuri
+          <i class="fa-solid fa-child baptism-icon-custom fa-2x"></i>
+          <span class="text-baptism">Botezuri</span>
         </button>
         <button
           class="btn btn-primary me-2 category-button-flex"
           data-category="family-photos"
         >
-          Fotografii de familie
+          <i class="fa-solid fa-people-roof fa-2x family-icon-custom"></i>
+          <span class="text-family">Fotografii de familie</span>
         </button>
         <button
           class="btn btn-primary me-2 category-button-flex"
