--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
           class="btn btn-primary me-2 category-button-flex"
           data-category="school"
         >
-          <i class="fa-solid fa-camera-retro fa-2x studio-icon-custom"></i>
+          <i class="fa-solid fa-graduation-cap fa-2x school-icon-custom"></i>
           <span class="text-studio">Fotografii de Școală</span>
         </button>
       </div>
