--- a/services.html
+++ b/services.html
@@ -206,7 +206,7 @@
               <h5 class="card-title text-white">Fotografie corporate</h5>
               <p class="card-text">
                 Pentru evenimente de firmă, team building-uri, portrete
-                profesionale și branding.
+                profesionale, branding, fotografii de produs.
               </p>
             </div>
           </div>
@@ -266,6 +266,15 @@
               <p class="card-text">
                 Pentru a asigura calitatea și coerența materialelor livrate.
               </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm bg-dark text-white">
+            <div class="card-body">
+              <h5 class="card-title text-white">Servicii de printare foto</h5>
+              <p class="card-text">Canvasuri de orice dimensiune.</p>
             </div>
           </div>
         </div>
