--- a/contact.html
+++ b/contact.html
@@ -138,12 +138,25 @@
                 >fotoadda@yahoo.com</a
               >
             </div>
-            <div class="mb-2 border rounded-4 p-2">
-              <i class="fas fa-phone me-2"></i>
-              <b>Număr de telefon: </b>
-              <a class="text-dark text-decoration-none" href="tel:+40744632620"
-                >0744 632 620</a
-              >
+            <div class="mb-2 border rounded-4 p-2 d-flex flex-column gap-3">
+              <div>
+                <i class="fas fa-phone me-2"></i>
+                <b>Număr de telefon: </b>
+                <a
+                  class="text-dark text-decoration-none"
+                  href="tel:+40744632620"
+                  >0744 632 620</a
+                >
+              </div>
+              <div>
+                <i class="fas fa-phone me-2"></i>
+                <b>Telefon Studio: </b>
+                <a
+                  class="text-dark text-decoration-none"
+                  href="tel:+40771292511"
+                  >0771 292 511</a
+                >
+              </div>
             </div>
             <div class="d-flex justify-content-start align-items-center mb-3">
               <a
