--- a/portfolio.html
+++ b/portfolio.html
@@ -1775,7 +1775,7 @@
     <footer class="footer footer-custom bg-light py-6">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 my-3 d-flex flex-column align-items-start gap-3">
+          <div class="col-xl-4 my-3 d-flex flex-column align-items-start gap-3">
             <div
               class="d-flex justify-content-center align-items-center logo-footer"
             >
@@ -1796,7 +1796,7 @@
               foto de familie și alte evenimente speciale din viața ta.
             </p>
           </div>
-          <div class="col-md-4 my-3">
+          <div class="col-xl-4 my-3">
             <h6>Linkuri utile</h6>
             <ul class="list-unstyled">
               <li>
@@ -1817,7 +1817,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4 my-3">
+          <div class="col-xl-4 my-3">
             <h6>Rețele de socializare</h6>
             <div class="mb-4">
               <a
